# arbiter

./: .gitignore  README.md  pyproject.toml
docs/: mvp-design-thoughs.md
src/arbiter/: __init__.py
