[tool.poetry]
name = "arbiter"
version = "0.1.0"
description = "Arbiter is a centralized exemption management service for AWS Config Rules and AWS Systems Manager remediation actions."
license = "Apache"
readme = "README.md"
homepage = "https://github.com/ericwestfall/arbiter"
repository = "https://github.com/ericwestfall/arbiter"
keywords = ["arbiter", "aws", "governance", "exemption", "AWS Config", "AWS Systems Manager"]
authors = ["Eric Westfall <eawestfall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
